# curltest

./: .gitmodules  CMakeLists.txt  CMakeProcessOutput.txt  README.md  build.sh  main.cpp  makeOutput.txt  mingw.txt  native.txt  output.txt
cmake/: HunterGate.cmake
